--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -270,7 +270,7 @@
     "authentication_email_reSend_link": "Resend",
     "authentication_email_beenSend": "Email sent to",
     "authentication_email_beenSend_info": "Please verify your email by clicking verification link",
-    "authentication_phone": "Phone number",
+    "authentication_phone": "Phone Number",
     "user_email_not_auth": "Email unverified",
     "user_email_not_auth_tip": "Please verify your email before processing, you can also resend verification email in {0}",
     "default": "Default",
@@ -389,6 +389,7 @@
     "asset_withdraw_status_failed": "Failed",
     "asset_withdraw_no_auth": "You must set two-factor authentication before withdraw {0}",
     "asset_withdraw_request_fail": "Withdraw data request fail",
+    "asset_withdraw_no_withdraw": "Temporarily unable to withdraw",
     "asset_go_set_auth": "Go to setting",
     "asset_withdraw_address": "Withdraw address",
     "asset_withdraw_address_add": "Add new address",
