--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -655,7 +655,7 @@
     "100012": "google验证失败",
     "100013": "google验证未绑定",
     "100014": "手机未绑定",
-    "100015": "非法的手机号",
+    "100015": "验证码错误",
     "100016": "绑定手机失败",
     "100017": "请先绑定二次验证",
     "100018": "需要一个昵称",
