--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -655,7 +655,7 @@
     "100012": "google驗證失敗",
     "100013": "google驗證未綁定",
     "100014": "手機未綁定",
-    "100015": "非法的手機號",
+    "100015": "驗證碼錯誤",
     "100016": "綁定手機失敗",
     "100017": "請先綁定二次驗證",
     "100018": "需要一個昵稱",
