密码输入框改为6-18位，并且提示修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -162,7 +162,7 @@
     "register_ad_info": "Get 200OMT after register and phone verification!",
     "userName": "Nickname",
     "userName_required": "Enter nickname",
-    "userName_notValid": "Nick name must consists with 6-16 letters or numbers",
+    "userName_notValid": "Nick name must consists with {0}-{1} letters or numbers",
     "userName_repeat": "Nick name exist, please try another one",
     "userName_new": "New nick name",
     "userName_new_required": "Enter new nick name",
@@ -180,7 +180,7 @@
     "password_login": "Password",
     "password_login_info": "Will used for login and release asset",
     "password_login_required": "Enter password",
-    "password_minLength": "Password must consists at least 6 letters and numbers",
+    "password_minLength": "Password must consists {0}-{1} letters and numbers",
     "password_forget": "Forget password",
     "password_different": "Password not match",
     "password_old": "Old password",
@@ -702,7 +702,7 @@
     "alipay_account_range": "Must consists with 4-40 characters",
     "card_holder_range": "Must consists with 2-20 characters",
     "card_number_range": "Must consists with 16-19 numbers",
-    "password_range": "Password must consists with 6-100 letters and numbers",
+    "password_range": "Password must consists with {0}-{1} letters and numbers",
     "address_label": "Must 2-16 characters",
     "max_length": "Must consists with 0 - {0} characters",
     "must_be_number": "Must be numbers"
