--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -162,7 +162,7 @@
     "register_ad_info": "注册完成并验证手机成功，即送 200 OMT！",
     "userName": "昵称",
     "userName_required": "请输入昵称",
-    "userName_notValid": "6位以上，字母或数字",
+    "userName_notValid": "{0}-{1}位字母或数字",
     "userName_repeat": "昵称重复，请重新输入",
     "userName_new": "新的昵称",
     "userName_new_required": "请输入新的昵称",
@@ -180,7 +180,7 @@
     "password_login": "登录密码",
     "password_login_info": "登录，释放资产时使用",
     "password_login_required": "请输入登录密码",
-    "password_minLength": "6位以上包含字母和数字",
+    "password_minLength": "{0}-{1}位包含字母和数字",
     "password_forget": "忘记密码",
     "password_different": "两次输入的密码不一致",
     "password_old": "原密码",
@@ -702,7 +702,7 @@
     "alipay_account_range": "支付宝账号长度应该介于4-40之间",
     "card_holder_range": "银行卡账户长度应该介于2-20之间",
     "card_number_range": "银行卡卡号长度应该介于16-19之间",
-    "password_range": "6-100位, 包含字母和数字",
+    "password_range": "{0}-{1}位, 包含字母和数字",
     "address_label": "必须2-16个字符",
     "max_length": "字数不得超过{0}",
     "must_be_number": "必须是数字"
