--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -162,7 +162,7 @@
     "register_ad_info": "註冊完成並驗證手機成功，即送 200 OMT！",
     "userName": "昵稱",
     "userName_required": "請輸入昵稱",
-    "userName_notValid": "6位以上，字母或數字",
+    "userName_notValid": "{0}-{1}位字母或數字",
     "userName_repeat": "昵稱重復，請重新輸入",
     "userName_new": "新的昵稱",
     "userName_new_required": "請輸入新的昵稱",
@@ -180,7 +180,7 @@
     "password_login": "登錄密碼",
     "password_login_info": "登錄，釋放資產時使用",
     "password_login_required": "請輸入登錄密碼",
-    "password_minLength": "6位以上包含字母和數字",
+    "password_minLength": "{0}-{1}位包含字母和數字",
     "password_forget": "忘記密碼",
     "password_different": "兩次輸入的密碼不一致",
     "password_old": "原密碼",
@@ -702,7 +702,7 @@
     "alipay_account_range": "支付寶帳號長度應該介於 4-40 之間",
     "card_holder_range": "銀行卡帳戶長度應該介於 2-20 之間",
     "card_number_range": "銀行卡卡號長度應該介於 16-19 之間",
-    "password_range": "6-100位, 包含字母和數字",
+    "password_range": "{0}-{1}位, 包含字母和數字",
     "address_label": "必須2-16個字元",
     "max_length": "字數不得超過{0}",
     "must_be_number": "必須是數位"
