--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -160,6 +160,7 @@
     "register_success": "註冊成功",
     "register_toLogin": "前往登錄",
     "register_ad_info": "註冊完成並驗證手機成功，即送 200 OMT！",
+    "agreement": "用戶協議",
     "userName": "昵稱",
     "userName_required": "請輸入昵稱",
     "userName_notValid": "{0}-{1}位字母或數字",
@@ -637,7 +638,8 @@
     "order_chat_send_msg_fail": "消息發送失敗",
     "order_chat_type_nonsupport": "不支持的消息類型",
     "order_data_request_fail": "訂單數據獲取失敗",
-    "order_chat_placeholder": "說點什麽"
+    "order_chat_placeholder": "說點什麽",
+    "order_trade_complaint": "交易申訴"
   },
   "request": {
     "100000": "服務器操作失敗",
