订单状态中，【交易取消】文案改成交易已关闭

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -612,8 +612,8 @@
     "order_pay_evaluate_fail": "Comment fail",
     "order_pay_evaluate_success": "Comment success",
     "order_deal_complete": "Transaction completed",
-    "order_deal_timeout": "Transaction cancelled",
-    "order_deal_cancel": "Transaction cancelled",
+    "order_deal_timeout": "Transaction closed",
+    "order_deal_cancel": "Transaction closed",
     "order_info_request_fail": "Order information request fail",
     "order_confirm_pay_title": "Confirm your payment",
     "order_confirm_pay_warn": "Please make sure the payment is finish before click 'Mark payment as complete', otherwise your account may marked as fraud.",
