--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -612,8 +612,8 @@
     "order_pay_evaluate_fail": "评价失败",
     "order_pay_evaluate_success": "评价成功",
     "order_deal_complete": "交易完成",
-    "order_deal_timeout": "交易取消",
-    "order_deal_cancel": "交易取消",
+    "order_deal_timeout": "交易已关闭",
+    "order_deal_cancel": "交易已关闭",
     "order_info_request_fail": "订单信息获取失败",
     "order_confirm_pay_title": "请确定已付款",
     "order_confirm_pay_warn": "请不要在未转账的情况下点击“标记付款完成”，这样可能产生纠纷和影响您的账号使用",
