--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -612,8 +612,8 @@
     "order_pay_evaluate_fail": "評價失敗",
     "order_pay_evaluate_success": "評價成功",
     "order_deal_complete": "交易完成",
-    "order_deal_timeout": "交易取消",
-    "order_deal_cancel": "交易取消",
+    "order_deal_timeout": "交易已關閉",
+    "order_deal_cancel": "交易已關閉",
     "order_info_request_fail": "訂單信息獲取失敗",
     "order_confirm_pay_title": "請確定已付款",
     "order_confirm_pay_warn": "請不要在未轉賬的情況下點擊“標記付款完成”，這樣可能產生糾紛和影響您的賬號使用",
