--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -696,6 +696,7 @@
     "100052": "广告已被下架",
     "100053": "提现取消失败",
     "100054": "最小限额必须小于您的资产余额",
+    "100055": "广告价格已修改，交易失败",
     "888888": "人机校验失败，请重试",
     "999999": "登录超时，请重新登录"
   },
