--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -696,6 +696,7 @@
     "100052": "廣告已被下架",
     "100053": "提現取消失敗",
     "100054": "最小限額必須小于您的資産余額",
+    "100055": "廣告價格已修改，交易失敗",
     "888888": "人機校驗失敗，請重試",
     "999999": "登入超時，請重新登入"
   },
