--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -663,7 +663,7 @@
     "100018": "Nick name needed",
     "100019": "Asset deficiency",
     "100020": "Unsupport currency",
-    "100021": "Ad not Aexist",
+    "100021": "Ad not exist",
     "100022": "Please enter proper amount",
     "100024": "Order not exist",
     "100025": "Insufficient balance",
