--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -647,7 +647,7 @@
     "100002": "需要登錄",
     "100003": "無效的",
     "100004": "用戶名或者密碼錯誤",
-    "100005": "旧密碼錯誤",
+    "100005": "密碼錯誤",
     "100006": "郵箱驗證token錯誤",
     "100007": "昵稱已存在",
     "100008": "請綁定二次驗證",
