--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -647,7 +647,7 @@
     "100002": "需要登录",
     "100003": "无效的邀請碼",
     "100004": "用户名或者密码错误",
-    "100005": "旧密码错误",
+    "100005": "密码错误",
     "100006": "邮箱验证token错误",
     "100007": "昵称已存在",
     "100008": "请绑定二次验证",
