--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -680,7 +680,7 @@
     "100036": "不能发布超过一个同类型广告",
     "100037": "无效的邮箱验证token",
     "100038": "需要二次验证",
-    "100039": "登录token失效",
+    "100039": "登录超时",
     "100040": "邮箱地址不存在",
     "100041": "提现失败",
     "100042": "提现地址转码失败",
