--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -680,7 +680,7 @@
     "100036": "不能發布超過一個同類型廣告",
     "100037": "無效的郵箱驗證token",
     "100038": "需要二次驗證",
-    "100039": "登錄token失效",
+    "100039": "登錄超時",
     "100040": "郵箱地址不存在",
     "100041": "提現失敗",
     "100042": "提現地址轉碼失敗",
