--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -639,7 +639,9 @@
     "order_chat_type_nonsupport": "不支持的消息類型",
     "order_data_request_fail": "訂單數據獲取失敗",
     "order_chat_placeholder": "說點什麽",
-    "order_trade_complaint": "交易申訴"
+    "order_trade_complaint": "交易申訴",
+    "order_upload_is_image": "必須上傳圖片",
+    "order_upload_limit": "上傳的圖片大小不能超過2MB"
   },
   "request": {
     "100000": "服務器操作失敗",
