--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -639,7 +639,9 @@
     "order_chat_type_nonsupport": "不支持的消息类型",
     "order_data_request_fail": "订单数据获取失败",
     "order_chat_placeholder": "说点什么",
-    "order_trade_complaint": "交易申诉"
+    "order_trade_complaint": "交易申诉",
+    "order_upload_is_image": "必须上传图片",
+    "order_upload_limit": "上传的图片大小不能超过2MB"
   },
   "request": {
     "100000": "服务器操作失败",
